<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>interview</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
    <!-- TestNG default test suite -->
    <testSuite>interview.xml</testSuite>
    <!-- dependency version -->
    <testng_ver>7.12.0</testng_ver>
    <selenium-java_ver>4.44.0</selenium-java_ver>
    <selenium-chrome-driver_ver>4.44.0</selenium-chrome-driver_ver>
    <selenium-edge-driver_ver>4.44.0</selenium-edge-driver_ver>
    <selenium-firefox-driver_ver>4.44.0</selenium-firefox-driver_ver>
    <rest-assured_ver>6.0.0</rest-assured_ver>
    <!-- plugin version -->
    <maven-clean-plugin_ver>3.5.0</maven-clean-plugin_ver>
    <maven-resources-plugin_ver>3.5.0</maven-resources-plugin_ver>
    <maven-compiler-plugin_ver>3.15.0</maven-compiler-plugin_ver>
    <maven-surefire-plugin_ver>3.5.6</maven-surefire-plugin_ver>
    <!-- plugin dependency version -->
    <aspectjweaver_ver>1.9.25.1</aspectjweaver_ver>
  </properties>

  <dependencies>
    <!-- Source: https://mvnrepository.com/artifact/org.testng/testng -->
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng_ver}</version>
    </dependency>
    <!-- Source: https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium-java_ver}</version>
    </dependency>
    <!-- Source: https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-chrome-driver</artifactId>
      <version>${selenium-chrome-driver_ver}</version>
    </dependency>
    <!-- Source: https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-edge-driver -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-edge-driver</artifactId>
      <version>${selenium-edge-driver_ver}</version>
    </dependency>
    <!-- Source: https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-firefox-driver -->
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-firefox-driver</artifactId>
      <version>${selenium-firefox-driver_ver}</version>
    </dependency>
    <!-- Source: https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <version>${rest-assured_ver}</version>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>${maven-clean-plugin_ver}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven-resources-plugin_ver}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin_ver}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin_ver}</version>
          <configuration>
            <suiteXmlFiles>
              <suiteXmlFile>src/test/resources/test_suites/${testSuite}</suiteXmlFile>
            </suiteXmlFiles>
            <argLine>
              --sun-misc-unsafe-memory-access=allow
              -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver_ver}/aspectjweaver-${aspectjweaver_ver}.jar"
            </argLine>
          </configuration>
          <dependencies>
            <!-- Source: https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
            <dependency>
              <groupId>org.aspectj</groupId>
              <artifactId>aspectjweaver</artifactId>
              <version>${aspectjweaver_ver}</version>
            </dependency>
          </dependencies>
        </plugin>
      </plugins>
    </pluginManagement>
    <resources>
      <resource>
        <directory>src/main/resources/configs</directory>
      </resource>
    </resources>
  </build>
</project>
